--- a/app/views/top.scala.html
+++ b/app/views/top.scala.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="utf-8">
-    <title>マイページ</title>
-</head>
-<body>
-<p>掲示板></p>
-</body>
+<html>
+ <head >
+  <meta charset="UTF-8">
+  <title>トップ画面</title>
+  <a a href="@routes.HomeController.top()">
+  	<img  src="@routes.Assets.versioned("images/images.jpg")" width="150" height="200" align="left">
+  </a>
+  <h1  style= "font-size:300%;margin-left:330px">トップ画面</h1>
+ </head>
+ <body>
+  </body>
 </html>
