--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -18,6 +18,8 @@
     <body>
         @* And here's where we render the `Html` object containing
          * the page content. *@
+        <h1>home</h1>
         @content
+
     </body>
 </html>
