--- a/app/views/sortOldCard.scala.html
+++ b/app/views/sortOldCard.scala.html
@@ -1,16 +1,15 @@
 @(idlist:List[String],helplist:List[String],sentlist:List[String],listkazu:Integer)
 
-@PastCard_common("新しい順") {
+@PastCard_common("古い順") {
 <div id="form">
 <p class="submit"><input type="button" value="ログアウト"></p>
-
         <h1>過去カード一覧</h1>
 
         <br><br>
 
 
 <nav>
-	<p><a href="@routes.HomeController.PastCard_resultTop()">部署別集計ページ</a></p>
+	<p><a href="@routes.HomeController.PastCard_resultTop()">部署集計ページ</a></p>
 	<br>
 	<p>ソート</p>
 	<p><a href="@routes.HomeController.PastCard()">新しい順</a></p>
