--- a/app/views/sortOldCard.scala.html
+++ b/app/views/sortOldCard.scala.html
@@ -9,7 +9,7 @@
 
 
 <nav>
-	<p><a href="@routes.HomeController.PastCard_resultTop()">部署集計ページ</a></p>
+	<p><a href="@routes.HomeController.PastCard_resultTop()">部署別集計ページ</a></p>
 	<br>
 	<p>ソート</p>
 	<p><a href="@routes.HomeController.PastCard()">新しい順</a></p>
@@ -19,6 +19,7 @@
 	<p><a href="@routes.HomeController.PastCard_A()">A評価一覧</a></p>
 	<p><a href="@routes.HomeController.PastCard_B()">B評価一覧</a></p>
 	<p><a href="@routes.HomeController.PastCard_C()">C評価一覧</a></p>
+	<p><a href="@routes.HomeController.PastCard_D()">未評価一覧</a></p>
 </nav>
 
 		<table>
