--- a/app/views/PastCard.scala.html
+++ b/app/views/PastCard.scala.html
@@ -20,6 +20,7 @@
 	<p><a href="@routes.HomeController.PastCard_A()">A評価一覧</a></p>
 	<p><a href="@routes.HomeController.PastCard_B()">B評価一覧</a></p>
 	<p><a href="@routes.HomeController.PastCard_C()">C評価一覧</a></p>
+	<p><a href="@routes.HomeController.PastCard_D()">未評価一覧</a></p>
 </nav>
 
 		<table>
