--- a/app/views/login2.scala.html
+++ b/app/views/login2.scala.html
@@ -19,10 +19,11 @@
     <p class="form-title">管理者ログイン</p>
 		<form action="post">
         	<h3><p>社員ID</p></h3>
-        	<p class="username"><input type="text" name="username" maxlength="8" autocomplete="OFF" /></p>
+        	<p class="username"><input type="text" name="username" maxlength="8" placeholder="管理者IDを入力して下さい" autocomplete="OFF" /></p>
         	<h3><p>社員PASS</p></h3>
-        	<p class="password"><input type="password" name="password" maxlength="8" autocomplete="OFF" /></p>
+        	<p class="password"><input type="password" name="password" maxlength="8" placeholder="管理者PASSを入力して下さい" autocomplete="OFF" /></p>
         	<p class="submit"><input type="submit" value="ログイン" /></p>
+        	<p class="submit"><input type="reset" value="リセット" /></p>
     	</form>
 </div>
 </body>
