--- a/app/views/login1.scala.html
+++ b/app/views/login1.scala.html
@@ -18,9 +18,9 @@
     <p class="form-title">株式会社　演習開発</p>
     <form action="login">
         <h3><p>社員ID</p></h3>
-        <p class="username"><input type="text" name="username" maxlength="8" placeholder="社員IDを入力して下さい" autocomplete="OFF" /></p>
+        <p class="username"><input type="text" name="enployee_id" maxlength="8" placeholder="社員IDを入力して下さい" autocomplete="OFF" /></p>
         <h3><p>社員PASS</p></h3>
-        <p class="password"><input type="password" name="password" maxlength="8"placeholder="社員PASSを入力して下さい"  autocomplete="OFF" /></p>
+        <p class="password"><input type="password" name="divasion_id" maxlength="8"placeholder="社員PASSを入力して下さい"  autocomplete="OFF" /></p>
         <p class="submit"><input type="submit" value="ログイン" /></p>
         <p class="submit"><input type="reset" value="リセット" /></p>
         
