--- a/app/views/PastCard_resultTop.scala.html
+++ b/app/views/PastCard_resultTop.scala.html
@@ -2,24 +2,19 @@
 <div id="form">
 
     	<p class="submit"><input type="button" value="ログアウト"></p>
-        <h1>過去カード一覧</h1>
+        <h1>感謝カード一覧</h1>
 
         <h2>集計</h2>
 
         <br><br>
 
 		<nav>
-			<p><a href="@routes.HomeController.PastCard_result_1()">部署1</a></p>
-				<p><a href="@routes.HomeController.PastCard_result_2()">部署2</a></p>
-				<p><a href="@routes.HomeController.PastCard_result_3()">部署3</a></p>
-				<p><a href="@routes.HomeController.PastCard_result_4()">部署4</a></p>
-				<p><a href="@routes.HomeController.PastCard_result_5()">部署5</a></p>
-				<p><a href="@routes.HomeController.PastCard_result_6()">部署6</a></p>
-				<p><a href="@routes.HomeController.PastCard_result_7()">部署7</a></p>
-				<p><a href="@routes.HomeController.PastCard_result_8()">部署8</a></p>
-				<p><a href="@routes.HomeController.PastCard_result_9()">部署9</a></p>
-				<p><a href="@routes.HomeController.PastCard_result_10()">部署10</a></p>
-				<p><a href="@routes.HomeController.PastCard_result_11()">部署11</a></p>
+			<p><a href="@routes.SakihamaController.PastCard_result_1()">人事</a></p>
+
+			<p><a href="@routes.SakihamaController.PastCard_result_2()">総務</a></p>
+			<p><a href="@routes.SakihamaController.PastCard_result_3()">システム開発</a></p>
+			<p><a href="@routes.SakihamaController.PastCard_result_4()">営業</a></p>
+
 		</nav>
 <footer>OFF</footer>
 </div>
