--- a/app/views/home.scala.html
+++ b/app/views/home.scala.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html>
  <head >
   <meta charset="UTF-8">
@@ -25,11 +25,11 @@
 	</table>
 
   <h1 style= "margin-left:300px"><a href="@routes.HomeController.send()"><font color="#000000">送信履歴</font-color></a></h1>
-  <iframe src="@routes.HomeController.send()" width="1000" height="250" border="1"
+  <iframe src="@routes.HomeController.send()" width="1000" height="250" border="10"
   style="position:relative; left:113px"></iframe>
 
   <h1 style= "margin-left:300px"><a href="@routes.HomeController.receive()"><font color="#000000">受信履歴</font></a></h1>
-  <iframe src="@routes.HomeController.receive()" width="1000" height="250" border="1"
-  style="position:relative; left:300px"></iframe>
+  <iframe src="@routes.HomeController.receive()" width="1000" height="250" border="10"
+  style="position:relative; left:300px; margin-bottom:30px"></iframe>
   </body>
 </html>
