--- a/app/views/login1.scala.html
+++ b/app/views/login1.scala.html
@@ -1,7 +1,6 @@
 @(loginForm: Form[Login])
 
 @import helper._
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -13,14 +12,13 @@
 </head>
 <body>
 <div id="form">
-	  @form(routes.AuthController.authenticate()) {
 	<img src="@routes.Assets.versioned("images/login.jpg")"width="80" height="80" alt="ロゴ">
     <p class="form-title">株式会社　演習開発</p>
     <form action="login">
         <h3><p>社員ID</p></h3>
-        <p class="username"><input type="text" name="enployee_id" maxlength="8" placeholder="社員IDを入力して下さい" autocomplete="OFF" /></p>
+        <p class="username"><input type="text" name="id" maxlength="8" placeholder="社員IDを入力して下さい" autocomplete="OFF" /></p>
         <h3><p>社員PASS</p></h3>
-        <p class="password"><input type="password" name="divasion_id" maxlength="8"placeholder="社員PASSを入力して下さい"  autocomplete="OFF" /></p>
+        <p class="password"><input type="password" name="user_id" maxlength="8"placeholder="社員PASSを入力して下さい"  autocomplete="OFF" /></p>
         <p class="submit"><input type="submit" value="ログイン" /></p>
         <p class="submit"><input type="reset" value="リセット" /></p>
         
@@ -28,6 +26,5 @@
         <p class="submit2"><a href="@routes.AuthController.login2()"><input type="button" value="管理者用業務"></a></p>
     </form>
 </div>
-}
 </body>
 </html>
