--- a/app/views/PastCard_result.scala.html
+++ b/app/views/PastCard_result.scala.html
@@ -12,11 +12,11 @@
 
 
 			<nav>
-				<p><a href="@routes.SakihamaController.PastCard_result_1()">人事</a></p>
+				<p><a href="@routes.SHomeController.PastCard_result_1()">人事</a></p>
 
-			<p><a href="@routes.SakihamaController.PastCard_result_2()">総務</a></p>
-			<p><a href="@routes.SakihamaController.PastCard_result_3()">システム開発</a></p>
-			<p><a href="@routes.SakihamaController.PastCard_result_4()">営業</a></p>
+			<p><a href="@routes.SHomeController.PastCard_result_2()">総務</a></p>
+			<p><a href="@routes.SHomeController.PastCard_result_3()">システム開発</a></p>
+			<p><a href="@routes.SHomeController.PastCard_result_4()">営業</a></p>
 
 
 			</nav>
