--- a/app/views/home.scala.html
+++ b/app/views/home.scala.html
@@ -12,7 +12,7 @@
  <body>
  <br>
  <h1 style="margin-top:120px">メニューバー</h1>
- <table border align="left"  style="font-size:200%">
+ <table border align="left"  style=font-size:200%>
 	<tr>
 	 <td height="60"><a href="@routes.HomeController.top()">トップ</a></td>
 	</tr>
@@ -26,10 +26,10 @@
 
   <h1 style= "margin-left:300px"><a href="@routes.HomeController.send()"><font color="#000000">送信履歴</font-color></a></h1>
   <iframe src="@routes.HomeController.send()" width="1000" height="250" border="10"
-  style="position:relative; left:113px"></iframe>
+  style="position:relative; left:113px; border:3px; border-style:solid; border-color:black;"></iframe>
 
   <h1 style= "margin-left:300px"><a href="@routes.HomeController.receive()"><font color="#000000">受信履歴</font></a></h1>
-  <iframe src="@routes.HomeController.receive()" width="1000" height="250" border="10"
-  style="position:relative; left:300px; margin-bottom:30px"></iframe>
+  <iframe src="@routes.HomeController.receive()" width="1000" height="250"
+  style="position:relative; left:300px; margin-bottom:30px; border:3px; border-style:solid; border-color:black;"></iframe>
   </body>
 </html>
