--- a/app/views/send.scala.html
+++ b/app/views/send.scala.html
@@ -16,7 +16,7 @@
 		<td style="font-size:200%">送信日</td>
 		<td style="font-size:200%">宛先名</td>
 		<td style="font-size:200%">件名</td>
-		<td style="font-size:200%">内容</td>
+		<!--  <td style="font-size:200%">内容</td> -->
 		</tr>
 
 
@@ -26,7 +26,7 @@
 			<td style="font-size:200%">@cardlist(num -1)</td>
 			<td style="font-size:200%">@namelist(num -1)</td>
 			<td style="font-size:200%">@helplist(num -1)</td>
-			<td style="font-size:200%">@sentlist(num -1)</td>
+	<!-- 	<td style="font-size:200%">@sentlist(num -1)</td> -->
 			</tr>
 		}
 	</table>
