--- a/app/views/login2.scala.html
+++ b/app/views/login2.scala.html
@@ -12,17 +12,24 @@
 </head>
 <body>
 <div id="form">
+	 @form(routes.AuthController.authenticate()) {
 	<a href="@routes.AuthController.login1()">
-	<img src="@routes.Assets.versioned("images/login.jpg")"width="80" height="80" alt="ロゴ"></a>
+	<img src="@routes.Assets.versioned("images/images.jpg")"width="80" height="80" alt="ロゴ"></a>
     <p class="form-title">管理者ログイン</p>
-		<form action="post">
+		<form action="login2">
+			
+			@if(form.hasGlobalErrors) {
+    		<p class="error">@form.globalError.message</p>
+			}
+			
         	<h3><p>社員ID</p></h3>
-        	<p class="username"><input type="text" name="id" maxlength="8" placeholder="管理者IDを入力して下さい" autocomplete="OFF" /></p>
+        	<p class="username"><input type="text" name="id" maxlength="8" placeholder="管理者IDを入力して下さい(半角数字)" autocomplete="OFF" /></p>
         	<h3><p>社員PASS</p></h3>
-        	<p class="password"><input type="password" name="user_id" maxlength="8" placeholder="管理者PASSを入力して下さい" autocomplete="OFF" /></p>
+        	<p class="password"><input type="password" name="user_id" maxlength="8" placeholder="管理者PASSを入力して下さい(半角英数)" autocomplete="OFF" /></p>
         	<p class="submit"><input type="submit" value="ログイン" /></p>
         	<p class="submit"><input type="reset" value="リセット" /></p>
     	</form>
 </div>
+			}
 </body>
 </html>
