--- a/app/views/top.scala.html
+++ b/app/views/top.scala.html
@@ -1,10 +1,16 @@
+@(loginForm: Form[Login])
+
+@import helper._
+
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="utf-8">
-    <title>マイページ</title>
-</head>
-<body>
-<p>掲示板></p>
-</body>
+	<head>
+    	<meta charset="utf-8">
+    	<title>マイページ</title>
+	</head>
+		<body>
+			 @form(routes.AuthController.authenticate()) {
+			<p>掲示板></p>
+			}
+		</body>
 </html>
