--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -50,7 +50,7 @@ input[type="password"] {
   background: #00ff00;
   border-radius: 20px;
   font-family: Courier New;
-  color: #fff;
+  color: #000080;
   font-size: 20px;
   font-weight: bold;
   padding: 5px 15px 5px 15px;
@@ -66,7 +66,7 @@ input[type="password"] {
   background: #00ff00;
   border-radius: 20px;
   font-family: Courier New;
-  color: #fff;
+  color: #000080;
   font-size: 20px;
   font-weight: bold;
   padding: 5px 15px 5px 15px;
