--- a/app/views/send.scala.html
+++ b/app/views/send.scala.html
@@ -1,4 +1,4 @@
-@(cardlist:List[String],userlist:List[String]
+@(cardlist:List[String],datelist:List[String],userlist:List[String]
 ,helplist:List[String],sentlist:List[String]
 ,count:Integer,namelist:List[String])
 
@@ -13,24 +13,22 @@
  	<table border="5" rules="rows">
 
 		<tr bgcolor="#FFBBFF">
-		<td style="font-size:200%">送信日</td>
-		<td style="font-size:200%">宛先名</td>
+		<td style="font-size:200%">助けてくれた人</td>
 		<td style="font-size:200%">件名</td>
-		<!--  <td style="font-size:200%">内容</td> -->
+		<td style="font-size:200%">内容</td>
+		<td style="font-size:200%">助けてもらった日</td>
 		</tr>
 
 
 
 		@for(num <- 1 to count){
 			<tr bgcolor="#FFCCFF">
-			<td style="font-size:200%">@cardlist(num -1)</td>
 			<td style="font-size:200%">@namelist(num -1)</td>
 			<td style="font-size:200%">@helplist(num -1)</td>
-	<!-- 	<td style="font-size:200%">@sentlist(num -1)</td> -->
+			<td style="font-size:200%">@sentlist(num -1)</td>
+			<td style="font-size:200%">@datelist(num -1)</td>
 			</tr>
 		}
 	</table>
-
-
  </body>
 </html>
