--- a/app/views/top.scala.html
+++ b/app/views/top.scala.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html>
+@(cardlist:List[String],datelist:List[String]
+,userlist:List[String],helplist:List[String]
+,sentlist:List[String],count:Integer,namelist:List[String])
+
 <html>
  <head >
   <meta charset="UTF-8">
@@ -9,5 +12,11 @@
   <h1  style= "font-size:300%;margin-left:330px">トップ画面</h1>
  </head>
  <body>
-  </body>
+
+
+
+
+
+
+ </body>
 </html>
