--- a/app/views/top.scala.html
+++ b/app/views/top.scala.html
@@ -4,13 +4,9 @@
 
 <!DOCTYPE html>
 <html lang="ja">
-	<head>
-    	<meta charset="utf-8">
-    	<title>マイページ</title>
-	</head>
-		<body>
-			 @form(routes.AuthController.authenticate()) {
-			<p>掲示板></p>
-			}
-		</body>
+<head>
+</head>
+<body>
+<p>トップページ</p>
+</body>
 </html>
