--- a/app/views/login1.scala.html
+++ b/app/views/login1.scala.html
@@ -12,18 +12,22 @@
 </head>
 <body>
 <div id="form">
-	 @form(routes.AuthController.authenticate()) {
+	
 	<img src="@routes.Assets.versioned("images/images.jpg")"width="80" height="80" alt="ロゴ">
     <p class="form-title">株式会社　演習開発</p>
-    <form action="login1">
     
-    	@if(form.hasGlobalErrors) {
-    	<p class="error">@form.globalError.message</p>
-    	}
+     @if(loginForm.hasGlobalErrors) {
+        <p class="error">
+            @loginForm.globalError.message
+        </p>
+        }
+         
+    <form action="@routes.AuthController.authenticate()" method="post">
+    
         <h3><p>社員ID</p></h3>
-        <p class="username"><input type="text" name="id" maxlength="8" placeholder="社員IDを入力して下さい(半角数字)" autocomplete="OFF" /></p>
-        <h3><p>社員PASS</p></h3>
-        <p class="password"><input type="password" name="user_id" maxlength="8"placeholder="社員PASSを入力して下さい(半角英数)"  autocomplete="OFF" /></p>
+		<p class="username"><input type="text" name="username" maxlength="8" placeholder="社員IDを入力して下さい(半角数字)" autocomplete="OFF" /></p>      
+		<h3><p>社員PASS</p></h3>
+        <p class="password"><input type="password" name="password" maxlength="8" placeholder="社員PASSを入力して下さい(半角英数)" autocomplete="OFF" /></p>
         <p class="submit"><input type="submit" value="ログイン" /></p>
         <p class="submit"><input type="reset" value="リセット" /></p>
         
@@ -31,6 +35,5 @@
         <p class="submit2"><a href="@routes.AuthController.login2()"><input type="button" value="管理者用業務"></a></p>
     </form>
 </div>
-		}
 </body>
 </html>
