--- a/app/views/login2.scala.html
+++ b/app/views/login2.scala.html
@@ -12,16 +12,18 @@
 </head>
 <body>
 <div id="form">
-	 @form(routes.AuthController.authenticate()) {
+	 
 	<a href="@routes.AuthController.login1()">
 	<img src="@routes.Assets.versioned("images/images.jpg")"width="80" height="80" alt="ロゴ"></a>
     <p class="form-title">管理者ログイン</p>
-		<form action="login2">
-			
-			@if(form.hasGlobalErrors) {
-    		<p class="error">@form.globalError.message</p>
-			}
-			
+    
+    @if(loginForm.hasGlobalErrors) {
+        <p class="error">
+            @loginForm.globalError.message
+        </p>
+        }
+		<form action="@routes.AuthController.authenticate()" method="post">
+		
         	<h3><p>社員ID</p></h3>
         	<p class="username"><input type="text" name="id" maxlength="8" placeholder="管理者IDを入力して下さい(半角数字)" autocomplete="OFF" /></p>
         	<h3><p>社員PASS</p></h3>
@@ -30,6 +32,5 @@
         	<p class="submit"><input type="reset" value="リセット" /></p>
     	</form>
 </div>
-			}
 </body>
 </html>
