--- a/app/views/common.scala.html
+++ b/app/views/common.scala.html
@@ -2,14 +2,12 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>ssss</title>
+		<title>@message</title>
 	</head>
 	<body>
 		<button class="button" type="submit" onclick="history.back()">戻る</button>
-		<h1>感謝カード詳細内容</h1>
 		<br>
 		<br>
-		<h1>@message</h1>
 		@content
 	</body>
 </html>
