--- a/app/views/top.scala.html
+++ b/app/views/top.scala.html
@@ -16,18 +16,19 @@
 					<button class="button2" type="submit">ログアウト</button>
 				</a>
 			</div>
-			<p>
-				<h1 align="center">
+			<p>				<h1 align="center">
 					トップ画面
 				</h1>
 			</p>
 		</header>
 		<div class="clearfix">
 			<nav>
-				<table class="table1" border="1" >
+				<table class="table1"  border="1" >
 					<tr>
 						<th>
-							メニューバー<br><br>
+							メニューバー
+							<br>
+							<br>
 							<a href="@routes.HomeController.link1()">
 								送受信履歴<br>
 								</a>
