--- a/app/views/home.scala.html
+++ b/app/views/home.scala.html
@@ -14,7 +14,7 @@
  <h1 style="margin-top:120px">メニューバー</h1>
  <table border align="left"  style=font-size:200%>
 	<tr>
-	 <td height="60"><a href="@routes.HomeController.top()">トップ</a></td>
+	 <td height="60"><a href="リンク先">トップ</a></td>
 	</tr>
 	<tr>
 	 <td height="60"><a href="リンク先">過去のカード</a></td>
