--- a/app/views/send.scala.html
+++ b/app/views/send.scala.html
@@ -1,6 +1,6 @@
 @(cardlist:List[String],datelist:List[String],userlist:List[String]
 ,helplist:List[String],sentlist:List[String]
-,count:Integer,namelist:List[String])
+,count:Integer,namelist:List[String],divisionlist:List[String])
 
 <html>
  <head>
@@ -10,23 +10,37 @@
  <body bgcolor="#bbbbbb">
 
 
- 	<table border="5" rules="rows">
+ 	<table border="1" rules="rows" >
 
 		<tr bgcolor="#FFBBFF">
-		<td style="font-size:200%">助けてくれた人</td>
-		<td style="font-size:200%">件名</td>
-		<td style="font-size:200%">内容</td>
-		<td style="font-size:200%">助けてもらった日</td>
+		<th style="font-size:200%">助けてくれた人</th>
+		<th style="font-size:200%">/件名</th>
+		<th style="font-size:200%">/助けてもらった日</th>
+		<th style="font-size:200%">/詳細</th>
 		</tr>
 
 
 
 		@for(num <- 1 to count){
 			<tr bgcolor="#FFCCFF">
-			<td style="font-size:200%">@namelist(num -1)</td>
+			<td style="font-size:200%">@divisionlist(num -1)<br>
+			@namelist(num -1)</td>
 			<td style="font-size:200%">@helplist(num -1)</td>
-			<td style="font-size:200%">@sentlist(num -1)</td>
 			<td style="font-size:200%">@datelist(num -1)</td>
+
+
+			<!--------   カードの詳細情報を渡す ---------------->
+			<form action="@routes.HomeController.card_2()" method="post">
+				<td>
+					<input type="hidden" name="division_namen" value="@divisionlist.get(num -1)"></input>
+					<input type="hidden" name="employee_namen" value="@namelist.get(num -1)"></input>
+					<input type="hidden" name="help_content" value="@helplist.get(num -1)"></input>
+					<input type="hidden" name="sent_content" value="@sentlist.get(num -1)"></input>
+					<input type="hidden" name="today" value="@datelist.get(num -1)"></input>
+
+					<input type="submit" value="詳細">
+			   	</td>
+			 </form>
 			</tr>
 		}
 	</table>
