--- a/public/stylesheets/thankscard2.css
+++ b/public/stylesheets/thankscard2.css
@@ -1,5 +1,6 @@
 body,p,form,input{
 	margin: 0;
+	text-align:cemter;
 }
 #send_screen{
 	background-color: #ffffff;
@@ -40,6 +41,7 @@ h1{
 	font-family: Courier New;
 	padding: 50px 20px 20px 20px;
 	text-decoration: none;
+	text-align:cemter;
 	margin-left: 450px;
 	margin-top: 200px;
 }
