--- a/app/views/cards.scala.html
+++ b/app/views/cards.scala.html
@@ -1,7 +1,6 @@
 @(daylist:List[String], userlist:List[String],
 helplist:List[String], sentlist:List[String],
-read: List[String], count:Integer,cardid: List[String],
-receivelist: List[String])
+read: List[String], count:Integer,cardid: List[String])
 
 
 <html>
@@ -14,21 +13,21 @@ receivelist: List[String])
 		<tr bgcolor="#FFBBFF">
 			<td style="font-size:200%" width="150">助けた人</td>
 			<td style="font-size:200%" width="150">件名</td>
-			<td style="font-size:200%" width="150">作成日</td>
+			<td style="font-size:200%" width="150">助けてもらった日</td>
 			<td style="font-size:200%" width="150">詳細</td>
 		</tr>
 		@for(num <- 1 to count){
 				<tr bgcolor="#99FFFF">
 				<td style="font-size:200%">@userlist(num -1)</td><!-- 助けた人 -->
 				<td style="font-size:200%">@helplist(num -1)</td><!-- 件名 -->
-				<td style="font-size:200%">@daylist(num -1)</td><!-- 時間 -->
-				<td style="font-size:200%">@sentlist(num -1)</td><!-- 時間 -->
+				<td style="font-size:200%">@daylist(num -1)</td><!-- 件名 -->
 				<form action="@routes.HomeController.thankscard()" method="post">
 				<td>
 					<input type="hidden" name="card_id" value="@cardid.get(num -1)"></input>
 					<input type="hidden" name="employee_namen" value="@userlist.get(num -1)"></input>
 					<input type="hidden" name="help_content" value="@helplist.get(num -1)"></input>
 					<input type="hidden" name="sent_content" value="@sentlist.get(num -1)"></input>
+
 					<input type="submit" value="詳細">
 
 					@*
