--- a/app/views/top.scala.html
+++ b/app/views/top.scala.html
@@ -12,11 +12,10 @@
 				</a>
 			</div>
 			<div class="logout">
-				<a href="@routes.HomeController.thankscard()">
 					<button class="button2" type="submit">ログアウト</button>
-				</a>
 			</div>
-			<p>				<h1 align="center">
+			<p>
+				<h1 align="center">
 					トップ画面
 				</h1>
 			</p>
@@ -29,12 +28,8 @@
 							メニューバー
 							<br>
 							<br>
-							<a href="@routes.HomeController.link1()">
 								送受信履歴<br>
-								</a>
-							<a href="@routes.HomeController.link2()">
 								カード作成<br>
-								</a>
 						</th>
 					</tr>
 				</table>
